clusters/easy-platform/apps/wecom-kf/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wecom-kf
  labels:
    platform.lazycampus.com/campus-network-client: "true"
